--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="header">
+      <nav>
+        <a href='/'>Главная</a>
+      </nav>
+    </div>
+    <div class="alert">
+      <% flash.each do |type, message| %>
+        <div class="flashMessage <%= type %>">
+          <%= message %>
+        </div>
+      <% end %>
+    </div>
+    <main class="content">
+      <%= yield %>
+    </main>
   </body>
 </html>
